Report native Skia interop metadata